Expose copyDestinationFiles to starlark
BUG=213348659
PiperOrigin-RevId: 496682156
Change-Id: I6096a370089fe6a984ca08c3c7fa496a335409e1